Começando a codificar a interface

--- a/saara/WebContent/templates/template.xhtml
+++ b/saara/WebContent/templates/template.xhtml
@@ -13,6 +13,10 @@
 	<link type="text/css" rel="stylesheet" href="../style/utils.css" media="screen,projection" />
 	<link type="text/css" rel="stylesheet" href="../style/logar.css" media="screen,projection" />
 	
+	<script type="text/javascript" src="../materialize/js/materialize.min.js"></script>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+	<link type="text/css" rel="stylesheet" href="../materialize/css/materialize.min.css" media="screen,projection" />
+	
 	<ui:insert name="estilos"/>
 </h:head>
 <h:body>
