--- a/saara/WebContent/style/utils.css
+++ b/saara/WebContent/style/utils.css
@@ -21,8 +21,10 @@ body{
 }
 .containerSombreado{
 	border-radius: 5px;
- 	-webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 24px 38px 3px rgba(0, 0, 	0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+ 	/* -webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 24px 38px 3px rgba(0, 0, 	0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2); */
+    /* box-shadow: 0px 0px 0px 1px; */
+    border: 1px solid;
 }
 #conteudoEsquerda{
 	min-height: 90%; /* //TODO mudar isso aqui quando tiver conteudo pra colocar */
