--- a/saara/WebContent/style/utils.css
+++ b/saara/WebContent/style/utils.css
@@ -8,6 +8,10 @@ body{
     margin: 0px;
 }
 
+.menuItem{
+	margin-left: 5px;
+	margin-right: 5px;
+}
 #conteudoHeader{
 	width: 1000px;
 	height: 40px;
