--- a/saara/WebContent/templates/template.xhtml
+++ b/saara/WebContent/templates/template.xhtml
@@ -8,6 +8,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<title><ui:insert name="titulo">Página não encontrada</ui:insert></title>
 	
+	<script type="text/javascript" src="../script/jquery-3.3.1.min.js"></script> 
+	
 	<link rel="shortcut icon" href="#{resource['camelo.png']}" type="image/x-icon" />
 	
 	<link type="text/css" rel="stylesheet" href="../style/utils.css" media="screen,projection" />
@@ -17,6 +19,9 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 	<link type="text/css" rel="stylesheet" href="../materialize/css/materialize.min.css" media="screen,projection" />
 	
+	<script type="text/javascript" src="../script/template.js"></script> 
+	
+	
 	<ui:insert name="estilos"/>
 </h:head>
 <h:body>
@@ -25,8 +30,9 @@
 		<div id="conteudoHeader">
 			<ui:insert name="header"></ui:insert>
 			<p:menubar>
-				<p:menuitem value="Home" url="../paginas/home.xhtml" id="menuItemHome"/>
-				<p:menuitem value="Atividades" url="../paginas/atividades.xhtml" id="menuItemAtividades"/>
+				<p:menuitem value="Home" url="../paginas/home.xhtml" id="menuItemHome" class="menuItem waves-effect waves-light"/>
+				<p:menuitem value="Aulas" url="../paginas/aulas.xhtml" id="menuItemAulas" class="menuItem waves-effect waves-light"/>
+				<p:menuitem value="Anotações" url="../paginas/anotacoes.xhtml" id="menuItemAnotacoes" class="menuItem waves-effect waves-light"/>
 			</p:menubar>
 		
 		</div>
@@ -41,6 +47,8 @@
 			<ui:insert name="conteudoDireita">Left Section</ui:insert>
 		</div>
 	</div>
+	
+	
 
 </h:body>
 </html>
